--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,7 @@
 AC_PREREQ([2.69])
 AC_INIT([tp], [svn], [itsme@benjwiebe.com])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+AM_SILENT_RULES([yes])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
