--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,3 +1,3 @@
 AM_CPPFLAGS = -I$(top_srcdir)
-TESTS = onehour.sh twolines.sh
-EXTRA_DIST = onehour.sh twolines.sh onehour.dat twolines.dat
+TESTS = onehour.sh twolines.sh dst.sh
+EXTRA_DIST = onehour.sh twolines.sh onehour.dat twolines.dat dst.sh dst.dat
