--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,3 +1,3 @@
 AM_CPPFLAGS = -I$(top_srcdir)
-TESTS = onehour.sh twolines.sh dst.sh twomonths.sh lastlinein.sh comments.sh
-EXTRA_DIST = onehour.sh twolines.sh onehour.dat twolines.dat dst.sh dst.dat twomonths.sh twomonths.dat lastlinein.sh lastlinein.dat comments.sh comments.dat
+TESTS = onehour.sh twolines.sh dst.sh twomonths.sh lastlinein.sh comments.sh twomonths_unixcomment.sh
+EXTRA_DIST = onehour.sh twolines.sh onehour.dat twolines.dat dst.sh dst.dat twomonths.sh twomonths.dat lastlinein.sh lastlinein.dat comments.sh comments.dat twomonths_unixcomment.sh twomonths_unixcomment.dat
