--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,11 @@ AM_CPPFLAGS = -I$(top_builddir)/lib -I$(top_srcdir)/lib -I$(top_srcdir)
 LDADD = lib/libgnu.a
 SUBDIRS = lib tests
 bin_PROGRAMS = lctp lctp_helper
-lctp_SOURCES = lctp.c datetime.c lctp_procline.c datetime.h lctp_atol.h chomp.h lctp_procline.h
+lib_LIBRARIES = liblctp_procline.a
+include_HEADERS = lctp_procline.h
+lctp_SOURCES = lctp.c datetime.c datetime.h lctp_atol.h
+lctp_LDADD = liblctp_procline.a
 lctp_helper_SOURCES = lctp_helper.c
+lctp_helper_LDADD = liblctp_procline.a
+liblctp_procline_a_SOURCES = datetime.c datetime.h lctp_procline.c chomp.c chomp.h lctp_procline.h
 EXTRA_DIST = m4/gnulib-cache.m4
