--- a/configure.ac
+++ b/configure.ac
@@ -5,13 +5,15 @@ AC_PREREQ([2.69])
 AC_INIT([lctp], [svn], [itsme@benjwiebe.com])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AM_SILENT_RULES([yes])
+AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([lctp.c])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
 AC_PROG_CC
-AC_PROG_CC_STDC
 gl_EARLY
+AC_PROG_CC_STDC
+AM_PROG_AR
 gl_INIT
 
 # Checks for libraries.
