Moved datetime functions into liblctp.a

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,11 +3,11 @@ AM_CPPFLAGS = -I$(top_builddir)/lib -I$(top_srcdir)/lib -I$(top_srcdir)
 LDADD = lib/libgnu.a
 SUBDIRS = lib tests
 bin_PROGRAMS = lctp lctp_helper
-lib_LIBRARIES = liblctp_procline.a
-include_HEADERS = lctp_procline.h
-lctp_SOURCES = lctp.c datetime.c datetime.h lctp_atol.h
-lctp_LDADD = liblctp_procline.a
+lib_LIBRARIES = liblctp.a
+include_HEADERS = lctp.h
+lctp_SOURCES = lctp.c
+lctp_LDADD = liblctp.a
 lctp_helper_SOURCES = lctp_helper.c
-lctp_helper_LDADD = liblctp_procline.a
-liblctp_procline_a_SOURCES = datetime.c datetime.h lctp_procline.c chomp.c chomp.h lctp_procline.h
+lctp_helper_LDADD = liblctp.a
+liblctp_a_SOURCES = datetime.c datetime.h lctp_procline.c chomp.c chomp.h lctp.h lctp_atol.h
 EXTRA_DIST = m4/gnulib-cache.m4
