--- a/lctp.pc.in
+++ b/lctp.pc.in
@@ -1,3 +1,8 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+
 Name: LCTP
 Description: Timefile parser library
 Version: @VERSION@
+Cflags: -I@includedir@
+Libs: -L@libdir@ -llctp
